Dokumenation für die Views

--- a/IvA/Views/Chat/Chat.cshtml
+++ b/IvA/Views/Chat/Chat.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+<!-- Diese HTML-Datei wurde in die Layout-HTML Seite eingebunden und dient nur noch für Debugging Zwecke-->
 
 <div class="container">
 
