--- a/IvA/Views/Home/Impressum.cshtml
+++ b/IvA/Views/Home/Impressum.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Hier Titel einfügen";
 }
 
+<!-- Impresuum mit Namen der Gruppenmitglieder und Matrikelnummer-->
 <div class="text-center">
     <h1 class="display-4">Impressum</h1>
     <p></p>
