--- a/IvA/Views/Home/Index.cshtml
+++ b/IvA/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 ViewData["Title"] = "Collab - Follow your Project";
 }
 
+<!--Titelbild und BEgrüßung auf der Startseite-->
 <div class="text-center">
     <h1 class="display-4">Willkommen</h1>
     <p>im besten Projektmanagement System aller Zeiten.</p>
