--- a/IvA/Views/Projekte/AddUser.cshtml
+++ b/IvA/Views/Projekte/AddUser.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "AddUser";
 }
 
+<!-- Ansicht mit einem EIngabefeld, um einen User zu einem Projekt hizuzufügen-->
 <h1 style="color:#ffa400"><b>Nutzer zum Projekt hinzufügen</b></h1>
 <hr />
 <div class="row">
