--- a/IvA/Views/Projekte/Create.cshtml
+++ b/IvA/Views/Projekte/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1 style="color: #ffa400"><b>Erstellen sie ein neues Projekt</b></h1>
 
-
+<!-- Formular für die Erstellung eines Projektes-->
 <h4>Projekte</h4>
 <hr />
 <div class="row">
@@ -44,6 +44,7 @@
     </div>
 </div>
 
+<!-- Rückleitung auf die Projektgesamtübersicht-->
 <div>
     <a asp-action="Index" class="btn btn-dark" style="color: #ffa400">
         <svg width="25px" height="25px" style="margin-right:10px" viewBox="0 0 16 16" class="bi bi-box-arrow-left" fill="#ffa400" xmlns="http://www.w3.org/2000/svg">
