--- a/IvA/Views/Projekte/ErrorMessage.cshtml
+++ b/IvA/Views/Projekte/ErrorMessage.cshtml
@@ -2,6 +2,7 @@
 
 @{ ViewData["Title"] = "Es ist ein Fehler aufgetreten"; }
 
+<!-- HTML-Datei mit den konkreten Fehlermeldungen, welche anhand der übergebenen ErrorID aufgerufen werden-->
 <h1>
     Es ist ein Fehler aufgetreten!
 </h1>
