--- a/IvA/Views/Message/Create.cshtml
+++ b/IvA/Views/Message/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Create";
 }
-
+<!--Diese HTML-Datei dient nur zu Test- und Debuggingzwecken und wird in der Live-Version nicht verwendet-->
 <h1>Create</h1>
 
 <h4>Message</h4>
