--- a/IvA/Views/Message/Index.cshtml
+++ b/IvA/Views/Message/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<!--Diese HTML-Datei dient nur zu Test- und Debuggingzwecken und wird in der Live-Version nicht verwendet-->
 <h1>Index</h1>
 
 <p>
@@ -31,29 +31,30 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.QuellID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZielID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nachricht)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Datum)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MessageID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MessageID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MessageID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QuellID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ZielID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nachricht)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Datum)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.MessageID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.MessageID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MessageID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
