--- a/IvA/Views/Projekte/Delete.cshtml
+++ b/IvA/Views/Projekte/Delete.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Projekt löschen";
 }
 
+<!-- Formular, um ein Projekt zu löschen-->
 <h2 style="padding-bottom:25px ; color:#ffa400"><b>Projekt löschen</b></h2>
 
 <h4 style="padding-bottom:25px">Wollen sie das Projekt wirklich löschen?</h4>
@@ -48,10 +49,11 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
     </dl>
-    
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProjekteId" />
         <input type="submit" value="Projekt löschen" class="btn btn-danger" /> |
+
+        <!-- Rückleitung auf die spezifische Projektdetailseite-->
         <a asp-action="Details" asp-route-id="@ViewBag.RoutingID" class="btn btn-dark" style="color: #ffa400">
             <svg width="25px" height="25px" style="margin-right:10px" viewBox="0 0 16 16" class="bi bi-box-arrow-left" fill="#ffa400" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M4.354 11.354a.5.5 0 0 0 0-.708L1.707 8l2.647-2.646a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708 0z" />
