--- a/IvA/Views/Projekte/PaketAnpassen.cshtml
+++ b/IvA/Views/Projekte/PaketAnpassen.cshtml
@@ -9,6 +9,7 @@
 
 <br />
 
+<!-- Formular, mit dem Details zu den Arbeitspaketen angepasst werden können-->
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -63,6 +64,7 @@
     </div>
 </div>
 
+<!-- Rückleitung auf die Paketdetailseite-->
 <div>
     <a asp-action="PaketDetails" asp-route-id="@Model.ArbeitsPaketId" class="btn btn-dark" style="color: #ffa400">
         <svg width="25px" height="25px" style="margin-right:10px" viewBox="0 0 16 16" class="bi bi-box-arrow-left" fill="#ffa400" xmlns="http://www.w3.org/2000/svg">
