--- a/IvA/Views/Projekte/PaketZeit.cshtml
+++ b/IvA/Views/Projekte/PaketZeit.cshtml
@@ -2,6 +2,8 @@
 
 @{ ViewData["Title"] = "Verbrauchte Zeit Eintragen"; }
 
+
+<!-- Formular zur Anpassung der verbrauchten Arbeitszeit für ein speziisches Paket-->
 <h1 style="color:#ffa400"><b>Tragen sie hier die eingesetzte Zeit für das Arbeitspaket ein</b></h1>
 <br />
 <h6 style="color:white">(Wenn sie eine Zeitkorrektur vornehmen möchten, geben sie bitte die Stundenanzahl mit negativem Vorzeichen ein)</h6>
@@ -55,6 +57,7 @@
     </div>
 </div>
 
+<!-- Rückleitung auf die Paketdetailseite-->
 <div>  
     <a asp-action="PaketDetails" asp-route-id="@Model.ArbeitsPaketId" class="btn btn-dark" style="color: #ffa400" >
         <svg width="25px" height="25px" style="margin-right:10px" viewBox="0 0 16 16" class="bi bi-box-arrow-left" fill="#ffa400" xmlns="http://www.w3.org/2000/svg">
