--- a/IvA/Views/UserLogin/Delete.cshtml
+++ b/IvA/Views/UserLogin/Delete.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+<!--Diese HTML-Datei dient nur zu Test- und Debuggingzwecken und wird in der Live-Version nicht verwendet-->
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -11,20 +11,20 @@
     <h4>UserLogin</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UserName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UserName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UserID)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UserID)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="UserLoginID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
