--- a/IvA/Views/UserLogin/Index.cshtml
+++ b/IvA/Views/UserLogin/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<!--Diese HTML-Datei dient nur zu Test- und Debuggingzwecken und wird in der Live-Version nicht verwendet-->
 <h1>Index</h1>
 
 <p>
@@ -22,21 +22,22 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserID)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.UserLoginID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.UserLoginID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.UserLoginID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserID)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.UserLoginID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.UserLoginID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.UserLoginID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 <div>
