--- a/IvA/Views/UserLoginMessageViewModel/Create.cshtml
+++ b/IvA/Views/UserLoginMessageViewModel/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
+<!--Diese HTML-Datei dient nur zu Test- und Debuggingzwecken und wird in der Live-Version nicht verwendet-->
+
 <h1>Create</h1>
 
 <h4>UserLoginMessageViewModel</h4>
