--- a/IvA/Views/UserLoginMessageViewModel/Edit.cshtml
+++ b/IvA/Views/UserLoginMessageViewModel/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+<!--Diese HTML-Datei dient nur zu Test- und Debuggingzwecken und wird in der Live-Version nicht verwendet-->
 <h1>Edit</h1>
 
 <h4>UserLoginMessageViewModel</h4>
