--- a/IvA/Views/Shared/_LoginPartial.cshtml
+++ b/IvA/Views/Shared/_LoginPartial.cshtml
@@ -1,31 +1,34 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-
 <!-- Generiert die Accountverwaltung und Loginfunktion am oberen rechten Bildschirmrand-->
-<ul class="navbar-nav flex-grow-1" style="padding-left: 400px; padding-right: 25px;">
+
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-            <span id="hallo">Hallo</span>
-            <span id="loginName">@User.Identity.Name!</span>
-        </a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-white">Logout</button>
-        </form>
-    </li>
-}
-else
-{
+    <ul class="navbar-nav" >
+        <li class="nav-item">
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+                <span id="hallo">Hallo</span>
+                <span id="loginName">@User.Identity.Name!</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="nav-link btn btn-link text-white">Logout</button>
+            </form>
+        </li>
+    </ul>
+        }
+   
+    else
+    {
+
+    <ul class="navbar-nav" >
     <li class="nav-item">
         <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Registrieren</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
-}
-</ul>
-
+    </ul>
+    }
