--- a/IvA/Views/Projekte/ErrorMessage.cshtml
+++ b/IvA/Views/Projekte/ErrorMessage.cshtml
@@ -17,6 +17,7 @@
     case 6:<h3>Der Nutzer wurde nicht gefunden</h3>break;
     case 7:<h3>Sie haben keine Berechtigung um Nutzer zum Projekt hinzuzufügen.</h3>break;
     case 8:<h3>Die Verbrauchte Arbeitszeit darf nicht negativ sein! Bitte korrigieren sie die Zeit.</h3>break;
+    case 9:<h3>Der Owner darf nicht aus dem Projekt entfernt werden. Ändern Sie zunächst den Owner.</h3>break;
 }
 
 <br />
