--- a/IvA/Views/Admin/ListUserProjects.cshtml
+++ b/IvA/Views/Admin/ListUserProjects.cshtml
@@ -33,7 +33,7 @@
                     @Html.DisplayFor(modelItem => item.ProjectRole)
                 </td>
                 <td>
-                    <a class="btn btn-dark" style="color:#ffa400" asp-action="Details" asp-controller="Projekte" asp-route-id="@item.ProjectRolesId">Projekt ansehen</a>
+                    <a class="btn btn-dark" style="color:#ffa400" asp-action="Details" asp-controller="Projekte" asp-route-id="@item.ProjectId">Projekt ansehen</a>
                 </td>
             </tr>
         }
