--- a/IvA/Views/Admin/ListUsers.cshtml
+++ b/IvA/Views/Admin/ListUsers.cshtml
@@ -9,27 +9,10 @@
 
     <h1 style="color: #ffa400 ; margin-bottom:20px"><b>Nutzerverwaltung</b></h1>
 
+<!--Tabelle für die Nutzerverwaltung-->
 <div class="PaketInfo">
-    <div class="modal" id="deleteModal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content btn-dark">
-                <div class="modal-header">
-                    <h5 class="modal-title">Warnung</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body" id="modalBody">
-                    <p>Wollen Sie den Nutzer wirklich löschen? Dieser Vorgang ist nicht umkehrbar.</p>
-                </div>
-                <div class="modal-footer">
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="data-whatever">Bestätigen</a>
-                    <button type="button" id="deleteButn" class="btn btn-dark" style="color: #ffa400" data-dismiss="modal">Abbrechen</button>
-                </div>
-            </div>
-        </div>
-    </div>
     <table class="table bg-table">
+        <!--Tabellenkopf-->
         <thead class="bg-table thead-dark">
             <tr>
                 <th scope="col" class="FirstLetter">
@@ -49,6 +32,7 @@
                 </th>
             </tr>
         </thead>
+        <!--Tabellenrumpf, enthält die Buttons "Projekte ansehen" , "Admin ernennen" und "Nutzer löschen"-->
         <tbody>
             @foreach (var item in Model)
             {
